@startuml
'https://plantuml.com/class-diagram

abstract class BNode{
    - int value
    + abstract addL(Node node)
    + abstract addR(Node node)
    + abstract removeL(Node node)
    + abstract removeR(Node node)
    + abstract String duyet();
}

BNode <|-- Leaft
BNode <|-- InnerNode
InnerNode --> BNode: left
InnerNode --> BNode: right
class InnerNode{
    String duyet()
}
note right of BNode::duyet
    Phương thúc duyệt in các giá trị
    trong cây theo thứ tự NRL
end note

note right of InnerNode::duyet
    Phương thúc duyệt in các giá trị
    trong cây theo thứ tự NRL
    StringBuilder builder = new StringBuilder();
    builder.append(value);
    if(left!=null)
        builder.append("\n\t")
                .append(left.duyet());
    if(right!=null)
        builder.append("\n\t")
                .append(right.duyet());
    return builder.toString();
end note
@enduml